manage: Add more list, fix spacing

--- a/styles/manage.css
+++ b/styles/manage.css
@@ -20,20 +20,14 @@ main {
 .blog-list {
   display: flex;
   flex-direction: column;
-  padding: 20px 0px;
 }
 
-.blog-list > * + * {
-  margin-top: 10px;
-}
-
-.blog:not(:first-child):not(:last-child) {
-  border-bottom: 1px solid hsl(240, 3.7%, 15.9%);
+.blog:not(:first-child) {
   border-top: 1px solid hsl(240, 3.7%, 15.9%);
 }
 
-.blog > * + * {
-  margin-top: 10px;
+.blog {
+  padding: 20px 0px;
 }
 
 .blog-title {
